k8s/nginx-lb-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/google-load-balancer-ip: "34.110.229.165"
spec:
  loadBalancerIP: "34.110.229.165"
