k8s/ingress-temp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern-app
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "mern-app-ip"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
